// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processChatTextResponse > scenario: multiple short chunks > should call the addOrUpdateAssistantMessageParts function with the correct arguments 1`] = `
[
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "A",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "B",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "C",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "D",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "E",
        "type": "text",
      },
    },
  ],
]
`;

exports[`processChatTextResponse > scenario: multiple short chunks > should call the onFinish function after the stream ends 1`] = `
[
  {
    "id": "test-id",
    "parts": [
      {
        "text": "ABCDE",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`processChatTextResponse > scenario: no text chunks > should call the onFinish function after the stream ends 1`] = `
[
  {
    "createdAt": 2025-01-01T00:00:00.000Z,
    "id": "test-id",
    "parts": [
      {
        "text": "",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`processChatTextResponse > scenario: no text chunks > should not call the addOrUpdateAssistantMessageParts function 1`] = `
[
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "",
        "type": "text",
      },
    },
  ],
]
`;

exports[`processChatTextResponse > scenario: simple text response > should call the addOrUpdateAssistantMessageParts function with the correct arguments 1`] = `
[
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "Hello, ",
        "type": "text",
      },
    },
  ],
  [
    {
      "chatId": "chat-id",
      "generateId": [Function],
      "partDelta": {
        "text": "world!",
        "type": "text",
      },
    },
  ],
]
`;

exports[`processChatTextResponse > scenario: simple text response > should call the onFinish function after the stream ends 1`] = `
[
  {
    "id": "test-id",
    "parts": [
      {
        "text": "Hello, world!",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;
